fix: fix overflow

--- a/sourse/pug/blocks/sAuthor/_sAuthor.scss
+++ b/sourse/pug/blocks/sAuthor/_sAuthor.scss
@@ -107,9 +107,7 @@
 		}
 	}
 
-  
   position: relative;
-  overflow: hidden;
 	&__content {
     .h6 {
       margin-bottom: rem(23);
